# promt_comparator-

./: README.md
promptdiff/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_ACTIONS_SETUP.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  READY_FOR_PYPI.md  comparator.py  diff_engine.py  main.py  pyproject.toml  runner.py  setup.py
promptdiff/.github/workflows/: publish.yml
promptdiff/examples/: example1_basic.py  example2_rag.py
promptdiff/promptdiff/: __init__.py
