[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptdiff"
version = "0.1.0"
description = "🔥 Smart prompt comparison & evaluation tool using LLM-as-judge. Compare multiple prompts, get intelligent scoring, and find the best one."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "prompt-engineering",
    "llm",
    "comparison",
    "evaluation",
    "rag",
    "mistral",
    "ollama"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/promptdiff"
Documentation = "https://github.com/yourusername/promptdiff#readme"
Repository = "https://github.com/yourusername/promptdiff.git"
Issues = "https://github.com/yourusername/promptdiff/issues"

[tool.setuptools]
packages = ["promptdiff"]
